[package]
name = "avtag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
cmd_lib = "1.2.2"
comfy-table = "5.0.0"
once_cell = "1.9.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["blocking"] }
rust-embed = "6.2.0"
scopeguard = "1.1.0"
semver = "1.0.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_regex = "1.1.0"
shellexpand = "2.1.0"
tempfile = "3.3.0"
toml = "0.5.8"
